# emb3d

./: .gitignore  README.md  client.py  config.py  emb3d.py  etypes.py  job.py  pyproject.toml  reader.py  textui.py
emb3d/: client.py  config.py  job.py  main.py  reader.py  test_utils.py  textui.py  types.py
emb3d/compute/: __init__.py  common.py  local.py  remote.py  test_common.py  test_local.py  visualize.py
emb3d/io/: reader.py  writer.py
emb3d/job/: __init__.py  common.py  local.py  remote.py  test_common.py  test_local.py
