[tool.poetry]
name = "emb3d"
version = "0.1.105"
description = "emb3d.co command line inteface to work with embeddings."
authors = ["Akhil Ravidas <ar@mod0.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
typer = {extras = ["all"], version = "^0.9.0"}
tiktoken = "^0.5.1"
tokenizers = "^0.14.0"
cohere = "^4.27"
aiolimiter = "^1.1.0"
httpx = "^0.25.0"
openai = "^0.28.1"
numpy = "^1.25"
sentence-transformers = "^2.2.2"
pyyaml = "^6.0.1"
pandas = "^2.1.1"
altair = "^5.1.2"
hdbscan = "^0.8.33"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
emb3d = "emb3d.main:app"

